# smart-traffic-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md
AI-tools/: read_pdf.py
backend/agent-service/: .gitignore  main.py  pyproject.toml
backend/agent-service/src/grpc_server/: chat_servicer.py  server.py
backend/agent-service/src/kafka/: consumer.py  producer.py
backend/agent-service/src/proto/: __init__.py  chat_service_pb2.py  chat_service_pb2_grpc.py
backend/multiagent-service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/multiagent-service/scripts/: _acceptance_failing_route.py  demo_kafka_chat.py  demo_plan_route.py  demo_taipei_live.py  inspect_tainan_coverage.py  inspect_tainan_live.py  inspect_taipei_sample.py
backend/multiagent-service/src/: __init__.py
backend/multiagent-service/src/agents/: chat_agent.py  geocoding.py  parking.py  routing.py  tdx_client.py  traffic.py  vd_traffic.py  weight_provider.py
backend/multiagent-service/src/cache/: __init__.py
backend/multiagent-service/src/db/: __init__.py  models.py  road_network.py  seed.py  seed_taipei.py  speed_camera.py  vd_sensor.py
backend/multiagent-service/src/kafka/: consumer.py  producer.py  runtime.py
backend/multiagent-service/src/mcp_servers/: __init__.py  routing_tool.py
backend/multiagent-service/tests/: test_build_graph_sql.py  test_chat_agent.py  test_consumer.py  test_consumer_extensibility.py  test_db_models.py  test_e2e_route.py  test_geocode_handler.py  test_geocoding.py  test_infra_extensions.py  test_lifespan_integration.py  test_main.py  test_parking.py  test_producer.py  test_road_network.py  test_routing.py  test_routing_tool.py  test_seed_vd_static.py  test_speed_camera.py  test_traffic.py  test_vd.py  test_vd_traffic.py  test_weight_provider.py
data/: kaohsiung_road_sections.json  speed_cameras.csv  taipei_road_sections.json
frontend/: .dockerignore  (+6 more)
(+168 files in other folders)
