[project]
name = "multiagent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "confluent-kafka>=2.12.2",
    "fastapi>=0.124.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "openai>=2.34.0",
    "pydantic>=2.10.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
